--- a/webver/styles.css
+++ b/webver/styles.css
@@ -37,6 +37,7 @@
 	right: 0;
 	background: white;
 	visibility: hidden;
+	border: 1px solid black;
 }
 
 #attackUpgradeCard {
@@ -45,4 +46,5 @@
 	right: 0;
 	background: white;
 	visibility: hidden;
+	border: 1px solid black;
 }
