--- a/webver/css/styles.css
+++ b/webver/css/styles.css
@@ -26,7 +26,7 @@ header h1
 
 #main_wrapper
 {
-  width: 500px;
+  width: 800px;
   margin: auto;
   padding: 4em 0;
 }
@@ -80,4 +80,83 @@ h1, h2, h3, h4, h5, h6
 p
 {
   font-family: 'PT Serif', serif;
+}
+
+#console
+{
+  position:absolute;
+  bottom:0;
+  right: 2em;
+  width: 500px;
+  height: 50px;
+  background: black;
+  color: lightgreen;
+  overflow: scroll;
+  padding-left: 2em;
+}
+
+#upgradechooser {
+  position: absolute;
+  top: 3em;
+  left: 3em;
+  background: white;
+  width: 200px;
+  height: 200px;
+  visibility: hidden;
+  border: 1px solid black;
+  padding: 1em;
+}
+
+.envCapabilities span.denomination {
+  background: green;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.envCapabilities span.false {
+  background: red;
+}
+
+div.envCapabilities {
+  width: 16.666666%;
+}
+
+#defenceUpgradeCard {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: white;
+  visibility: hidden;
+  border: 1px solid black;
+}
+
+#attackUpgradeCard {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: white;
+  visibility: hidden;
+  border: 1px solid black;
+}
+
+#game {
+  position: relative;
+}
+
+#main_wrapper{
+  position: relative;
+  height: 600px;
+}
+
+#resources {
+  position: absolute;
+  top:0;
+  right: 0;
+  width: 30%;
+}
+#canvas_wrapper {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 70%;
 }
